server-client 연결

--- a/DailySayingMobile/index.html
+++ b/DailySayingMobile/index.html
@@ -9,7 +9,8 @@
     <title>Daily Saying</title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <script data-main = "js/main.js" src = "js/node_modules/parse/dist/parse.js"></script>
+    <script src="js/node_modules/parse/dist/parse.js"></script>
+    <script src="bundle.js"></script>
     <script src="js/main.js"></script>
 </head>
 
