connect server-client

--- a/DailySayingMobile/index.html
+++ b/DailySayingMobile/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="js/node_modules/parse/dist/parse.js"></script>
-    <script src="bundle.js"></script>
+    <script src="js/bundle.js"></script> 
     <script src="js/main.js"></script>
 </head>
 
